@@ -18,6 +18,7 @@ Mantis
  * Modified color legend is now generated form the $g_status_enum_string variable.
  * Modified print_enum_string_option_list() to work better.
  * Modified bug_update_advanced to allow for more fields to be updated.
+ * Modified email subject links to match standard Mantis email format.
  * Added Hungarian translation.
  * Added g_bug_link_tag to let users customize how to create bug links.
  * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
